OW/force-app/main/default/objects/Account/fields/OW_Market_Share__c.field-meta.xml
<CustomField>
    <fullName>OW_Market_Share__c</fullName>
    <label>Market Share</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>