OW/force-app/main/default/objects/Account/fields/OW_Other_Event__c.field-meta.xml
<CustomField>
    <fullName>OW_Other_Event__c</fullName>
    <label>Other Event</label>
    <length>100</length>
    <type>Text</type>
</CustomField>