OW/force-app/main/default/objects/Account/fields/OW_Revenue_Size__c.field-meta.xml
<CustomField>
    <fullName>OW_Revenue_Size__c</fullName>
    <label>Revenue Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>