OW/force-app/main/default/objects/Account/fields/OW_Sales_Area__c.field-meta.xml
<CustomField>
    <fullName>OW_Sales_Area__c</fullName>
    <label>Sales Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>LA</fullName>
            </value>
            <value>
                <fullName>Europe &amp; CIS</fullName>
            </value>
            <value>
                <fullName>ME</fullName>
            </value>
            <value>
                <fullName>Africa</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>Aviation - BU</fullName>
            </value>
            <value>
                <fullName>Maritime - BU</fullName>
            </value>
            <value>
                <fullName>Government - BU</fullName>
            </value>
            <value>
                <fullName>Enterprise – BU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>