OW/force-app/main/default/objects/Account/fields/OW_Year_Started__c.field-meta.xml
<CustomField>
    <fullName>OW_Year_Started__c</fullName>
    <label>Year Started</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>